fixed dark mode

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -8,7 +8,7 @@
     background: var(--btnBg);
     transition: 0.4s;
     background-size: 200% auto;
-    color: #fff;
+    color: var(--fontColor);
     border-radius: var(--borderRadius);
     border: var(--border);
     padding: 8px;
