--- a/src/css/sidebar/board/board_selector.css
+++ b/src/css/sidebar/board/board_selector.css
@@ -1,9 +1,9 @@
 #boardSelector {
     position: absolute;
     left: 0px;
-    top: 0px;
+    top: 40px;
     width: 100%;
-    height: calc(100% - 152px - 32px);
+    height: calc(100% - 224px);
     padding-top: 16px;
     padding-bottom: 16px;
     overflow-y: scroll;
