--- a/src/css/sidebar/sidebar.css
+++ b/src/css/sidebar/sidebar.css
@@ -9,3 +9,16 @@
     height: 100%;
     background: var(--boxBg);
 }
+
+.sidebarTitle {
+    position: absolute;
+    left: 16px;
+    top: 20px;
+    font-size: 24px;
+}
+
+.theme-toggle {
+    position: absolute;
+    right: 16px;
+    top: 20px;
+}
